--- a/src/styles/_layout.scss
+++ b/src/styles/_layout.scss
@@ -42,10 +42,19 @@
         color:v.$bluegray;
         text-align: center;
         cursor: pointer;
-
-
     }
-
+    .forgotPassword {
+        display: flex; 
+        justify-content: center; 
+        padding: 20px 20px 20px;
+        border-radius: 10%;
+        background: v.$lightcolor;
+        margin-bottom: 10px;
+        margin-left: 2px;
+        margin-right: 2px;
     
+    }
+ 
+
     }
 }
