--- a/src/styles/_layout.scss
+++ b/src/styles/_layout.scss
@@ -3,7 +3,7 @@
 .container {
 
     width: 100vw;
-    height: 100vh;
+    height: 105vh;
     padding: 20px;
     background-image: v.$container-bg;
     display: flex;
@@ -54,7 +54,53 @@
         margin-right: 2px;
     
     }
- 
+    .register {
+        display: flex; 
+        justify-content: center; 
+        padding: 20px 20px 20px;
+        border-radius: 10%;
+        background: v.$lightcolor;
+        margin-bottom: 10px;
+        margin-left: 2px;
+        margin-right: 2px;
+    
+    }
+
+    .personalData1 {
+        display: flex; 
+        justify-content: center; 
+        padding: 20px 20px 20px;
+        border-radius: 10%;
+        background: v.$lightcolor;
+        margin-bottom: 10px;
+        margin-left: 2px;
+        margin-right: 2px;
+    
+    }
+
+    .personalData2 {
+        display: flex; 
+        justify-content: center; 
+        padding: 20px 20px 20px;
+        border-radius: 10%;
+        background: v.$lightcolor;
+        margin-bottom: 10px;
+        margin-left: 2px;
+        margin-right: 2px;
+    
+    }
+
+    .personalData3 {
+        display: flex; 
+        justify-content: center; 
+        padding: 20px 20px 20px;
+        border-radius: 10%;
+        background: v.$lightcolor;
+        margin-bottom: 10px;
+        margin-left: 2px;
+        margin-right: 2px;
+    
+    }
 
     }
 }
