--- a/src/stories/Boton/Boton.css
+++ b/src/stories/Boton/Boton.css
@@ -18,3 +18,17 @@
     border: 1px solid beige;
 }
 
+.btn-grande {
+    font-size: 1.5rem;
+    padding: 0.9rem 1.6rem;
+}
+
+.btn-medio {
+    font-size: 1rem;
+    padding: 0.6rem 1.2rem;
+}
+
+.btn-chico {
+    font-size: 0.6rem;
+    padding: 0.5rem 1rem;
+}
